[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "A short description of your project"
authors = ["Innovations Team <Innovation@wginc.com>"]
readme = "README.md"
packages = [{include = "project_name"}]

[tool.poetry.dependencies]
python = "^3.14"

[tool.poetry.group.dev.dependencies]
black  = "*"
ruff   = "*"
pytest = "*"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── Black ──────────────────────────────────────────────────────────────────────
[tool.black]
line-length    = 88
target-version = ["py314"]

# ── Ruff ───────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 88
target-version = "py314"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["project_name"]

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
